# config-service

./: .gitignore  README.md  config.example.toml  package-lock.json  package.json
admin-ui/: index.html  package-lock.json  package.json  vite.config.js
admin-ui/src/: App.jsx  AppRemote.jsx  styles.css
client/: config-client.js
python/: README.md  pyproject.toml
python/homelab_config/: __init__.py  client.py
src/: config.js  db.js  index.js  routes.js
src/middleware/: authGuard.js
